# sparrow-atlas-resizer

./: CMakeLists.txt  dialogs.cpp  dialogs.h  main.cpp
